// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Profile/components/.../AwardItemView when props.editMode = false when props.organisation_id exists renders correctly 1`] = `
<div
  className="profile-experience-block profile-verified-status"
>
  <div>
    <div
      className="relative"
    >
      <div
        className="Avatar Avatar-white Avatar-size-109"
      >
        <img
          alt="logo"
          src="appii-placeholder.png"
        />
      </div>
      <p
        className="visible-xs visible-sm"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success"
          data-tooltip="Verified"
        >
           
        </i>
      </p>
    </div>
    <div
      className="profile-experience-info"
    >
      <i
        className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success hidden-xs hidden-sm"
        data-tooltip="Verified"
      >
         
      </i>
      <p>
        Test name
      </p>
      <span>
        <a
          href="/organisations/55"
          onClick={[Function]}
          title="Company Inc"
        >
          Company Inc
        </a>
      </span>
      <em>
        03/2016
      </em>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../AwardItemView when props.editMode = false when props.verified_status = "pending_verification" renders correctly 1`] = `
<div
  className="profile-experience-block profile-pending-status"
>
  <div>
    <div
      className="relative"
    >
      <div
        className="Avatar Avatar-white Avatar-size-109"
      >
        <img
          alt="logo"
          src="appii-placeholder.png"
        />
      </div>
      <p
        className="visible-xs visible-sm"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-warning"
          data-tooltip="Pending verification"
        >
           
        </i>
      </p>
    </div>
    <div
      className="profile-experience-info"
    >
      <i
        className="profile-status-ico tooltip-position-top tooltip-movable tooltip-warning hidden-xs hidden-sm"
        data-tooltip="Pending verification"
      >
         
      </i>
      <p>
        Test name
      </p>
      <span>
        Company Inc
      </span>
      <em>
        03/2016
      </em>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../AwardItemView when props.editMode = false when props.verified_status = "verified" renders correctly 1`] = `
<div
  className="profile-experience-block profile-verified-status"
>
  <div>
    <div
      className="relative"
    >
      <div
        className="Avatar Avatar-white Avatar-size-109"
      >
        <img
          alt="logo"
          src="appii-placeholder.png"
        />
      </div>
      <p
        className="visible-xs visible-sm"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success"
          data-tooltip="Verified"
        >
           
        </i>
      </p>
    </div>
    <div
      className="profile-experience-info"
    >
      <i
        className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success hidden-xs hidden-sm"
        data-tooltip="Verified"
      >
         
      </i>
      <p>
        Test name
      </p>
      <span>
        Company Inc
      </span>
      <em>
        03/2016
      </em>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../AwardItemView when props.editMode = true when award_id and created_at exists renders correctly 1`] = `
<div
  className="profile-experience-block profile-verified-status"
>
  <div
    className="profile-experience-btns"
  >
    <button
      className="edit-btn"
      onClick={[Function]}
    >
       
    </button>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        className="Avatar Avatar-white Avatar-size-109"
      >
        <img
          alt="logo"
          src="appii-placeholder.png"
        />
      </div>
      <p
        className="visible-xs visible-sm"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success"
          data-tooltip="Verified"
        >
           
        </i>
      </p>
    </div>
    <div
      className="profile-experience-info"
    >
      <i
        className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success hidden-xs hidden-sm"
        data-tooltip="Verified"
      >
         
      </i>
      <p>
        Test name
      </p>
      <span>
        Company Inc
      </span>
      <em>
        03/2016
      </em>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../AwardItemView when props.editMode = true when awardType = "language" renders correctly 1`] = `
<div
  className="profile-experience-block profile-rejected-status"
>
  <div
    className="profile-experience-btns"
  >
    <button
      className="edit-btn"
      onClick={[Function]}
    >
       
    </button>
  </div>
  <div
    className="profile-experience-info"
  >
    <p>
      Test name
    </p>
    <span>
      Intermediate - High (B1)
    </span>
    <div
      className="ProgressBar"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "54.54545454545455%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../AwardItemView when props.editMode = true when awardType = "skill" renders correctly 1`] = `
<div
  className="profile-experience-block profile-verified-status"
>
  <div
    className="profile-experience-btns"
  >
    <button
      className="edit-btn"
      onClick={[Function]}
    >
       
    </button>
  </div>
  <div
    className="profile-experience-info"
  >
    <p>
      Test name
    </p>
    <span>
      3
    </span>
    <div
      className="ProgressBar"
    >
      <div
        className="progress"
        style={
          Object {
            "width": "60%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../AwardItemView when props.editMode = true when props.verified_status = "not_verified" renders correctly 1`] = `
<div
  className="profile-experience-block profile-unverified-status"
>
  <div
    className="profile-experience-btns"
  >
    <button
      className="edit-btn"
      onClick={[Function]}
    >
       
    </button>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        className="Avatar Avatar-white Avatar-size-109"
      >
        <img
          alt="logo"
          src="appii-placeholder.png"
        />
      </div>
      <p
        className="visible-xs visible-sm"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark"
          data-tooltip="Not verified"
        >
           
        </i>
      </p>
    </div>
    <div
      className="profile-experience-info"
    >
      <i
        className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark hidden-xs hidden-sm"
        data-tooltip="Not verified"
      >
         
      </i>
      <p>
        Test name
      </p>
      <span>
        Company Inc
      </span>
      <em>
        03/2016 – 06/2016
      </em>
    </div>
  </div>
</div>
`;
